--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -1,17 +1,4 @@
-.content {
-    grid-area: c;
-    background: burlywood;
-}
-
-.content img {
+.profile_img {
     width: 100%;
-    height: 100px;
-}
-
-.item {
-    color: green;
-}
-
-.posts {
-    background: burlywood;
+    height: 80px;
 }
