--- a/src/components/dialogs/Dialogs.module.css
+++ b/src/components/dialogs/Dialogs.module.css
@@ -7,10 +7,15 @@
     padding: 10px;
 }
 
+.dialog a{
+    text-decoration: none;
+    color: black;
+}
+
 .message {
     padding: 2px;
 }
 
-.active {
+.active a{
     color: goldenrod;
 }
