lesson 29 home task

--- a/src/components/dialogs/Dialogs.module.css
+++ b/src/components/dialogs/Dialogs.module.css
@@ -1,6 +1,10 @@
 .dialogs {
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 10fr;
+}
+
+.dialogsContainer {
+
 }
 
 .active a {
