--- a/src/components/dialogs/dialogItem/DialogItem.module.css
+++ b/src/components/dialogs/dialogItem/DialogItem.module.css
@@ -1,8 +1,15 @@
 .dialog {
     padding: 10px;
+    border-right: 2px solid grey;
 }
 
 .dialog a {
     text-decoration: none;
     color: black;
+}
+
+.dialog a img{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
 }
