--- a/src/components/dialogs/messageItem/MessageItem.module.css
+++ b/src/components/dialogs/messageItem/MessageItem.module.css
@@ -1,3 +1,41 @@
 .message {
-    padding: 2px;
+    margin: 10px;
+    padding: 20px;
+    border: 1px solid darkgray;
+    border-radius: 10px;
+}
+
+.dialog:nth-child(odd) {
+    display: grid;
+    margin-left: 150px;
+    grid-template-columns: 10% 40%;
+}
+
+
+.dialog {
+    display: grid;
+    margin-left: 50px;
+    grid-template-columns: 10% 40%;
+}
+
+.person {
+    margin: 10px auto;
+    width: 100%;
+}
+
+.personName {
+text-align: center;
+}
+
+.avatar {
+    height: auto;
+    width: 100%;
+    text-align: center;
+}
+
+.avatar img {
+    align-self: center;
+    height: 30px;
+    border-radius: 50%;
+
 }
